--- a/analysis/methylation_analysis.Rmd
+++ b/analysis/methylation_analysis.Rmd
@@ -200,7 +200,7 @@ grid.arrange(
 ## IBD results
 
 ### cTWAS parameters (50kb, h2 pvalue<0.00001)
-```{r, echo=FALSE, fig.width=10, fig.height=10}
+```{r, echo=FALSE, fig.width=10, fig.height=8}
 param <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/ibd_multi_E_M/ibd_multi_E_M.param.RDS")
 gwas_n <- 59957
 colors <- c(  "#1f77b4", "#ff7f0e", "#2ca02c", "#d62728",  "#9467bd", "#8c564b", "#e377c2", "#7f7f7f",  "#bcbd22",  "#17becf",  "#f7b6d2",  "#c5b0d5",  "#9edae5", "#ffbb78",  "#98df8a",  "#ff9896" )
@@ -403,7 +403,7 @@ genes_EM <- genes_EM[genes_EM$combined_pip>0.8,]
 - One gene (BRD7) is mediation (meQTL pip decreases from 0.96 to 0.09, eQTL pip=0.90).
 - Two genes (TNFSF15 and ATG16L1) are competition (eQTL pip = 0.2 and meQTL pip is decreased by 0.2).
 - Nine genes are meQTL alone (no eQTL pip).
-```{r, echo=FALSE, fig.width=5, fig.height=5}
+```{r, echo=FALSE, fig.width=6, fig.height=5}
 set1 <- genes_M$gene_name
 set2 <- genes_EM$gene_name
 aa <- venn.diagram(
@@ -419,7 +419,7 @@ grid.draw(aa)
 ```
 
 ### Adding meQTL to eQTL identifies an additional 11 high PIP genes
-```{r, echo=FALSE, fig.width=5, fig.height=5}
+```{r, echo=FALSE, fig.width=6, fig.height=5}
 set1 <- genes_E$gene_name
 set2 <- genes_EM$gene_name
 aa <- venn.diagram(
@@ -457,7 +457,7 @@ finemap_res_multi <- anno_finemap_res(finemap_res_multi,
 ```
 
 ```{r}
-finemap_res_multi[!is.na(finemap_res_multi$gene_name) & finemap_res_multi$gene_name == "ETS1", ]
+#finemap_res_multi[!is.na(finemap_res_multi$gene_name) & finemap_res_multi$gene_name == "ETS1", ]
 #pdf(file = "/project/xinhe/shengqian/TNFSF15.pdf",width = 12,height = 10)#
 make_locusplot(finemap_res_multi,
                region_id = "9_114257521_115159681",
@@ -468,12 +468,12 @@ make_locusplot(finemap_res_multi,
                filter_cs = TRUE,
                color_pval_by = "cs",
                color_pip_by = "cs",
-               point.sizes = c(2, 8),
-               label.text.size = 4,
-               axis.text.size = 18,
-               axis.title.size = 18,
-               legend.text.size = 18,
-               panel.heights = c(4, 4, 0.8, 2))
+               point.sizes = c(1, 3),
+               label.text.size = 2.5,
+               axis.text.size = 12,
+               axis.title.size = 12,
+               legend.text.size = 12,
+               panel.heights = c(4, 4, 1, 4))
 ```
 
 ```{r, echo=FALSE, eval=FALSE}
