--- a/analysis/methylation_analysis.Rmd
+++ b/analysis/methylation_analysis.Rmd
@@ -467,13 +467,7 @@ make_locusplot(finemap_res_multi,
                filter_protein_coding_genes = TRUE,
                filter_cs = TRUE,
                color_pval_by = "cs",
-               color_pip_by = "cs",
-               point.sizes = c(1, 3),
-               label.text.size = 2.5,
-               axis.text.size = 12,
-               axis.title.size = 12,
-               legend.text.size = 12,
-               panel.heights = c(4, 4, 1, 4))
+               color_pip_by = "cs")
 ```
 
 ```{r, echo=FALSE, eval=FALSE}
