--- a/analysis/methylation_analysis.Rmd
+++ b/analysis/methylation_analysis.Rmd
@@ -456,7 +456,8 @@ finemap_res_multi <- anno_finemap_res(finemap_res_multi,
                                       use_gene_pos = "mid")
 ```
 
-```{r}
+#### ETS1
+```{r echo=FALSE, message=FALSE, results='hide', warning=FALSE}
 #finemap_res_multi[!is.na(finemap_res_multi$gene_name) & finemap_res_multi$gene_name == "ETS1", ]
 #pdf(file = "/project/xinhe/shengqian/TNFSF15.pdf",width = 12,height = 10)#
 make_locusplot(finemap_res_multi,
@@ -470,11 +471,10 @@ make_locusplot(finemap_res_multi,
                color_pip_by = "cs")
 ```
 
-```{r, echo=FALSE, eval=FALSE}
-dev.off()
 
-pdf(file = "/project/xinhe/shengqian/ATG16L1.pdf",width = 12,height = 10)
-#finemap_res_multi[finemap_res_multi$gene_name=="TNFSF15",]
+#### ATG16L1
+```{r, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
+#pdf(file = "/project/xinhe/shengqian/ATG16L1.pdf",width = 12,height = 10)
 make_locusplot(finemap_res_multi,
                region_id = "2_232685293_234242343",
                ens_db = ens_db,
@@ -483,112 +483,83 @@ make_locusplot(finemap_res_multi,
                filter_protein_coding_genes = TRUE,
                filter_cs = TRUE,
                color_pval_by = "cs",
-               color_pip_by = "cs",
-               point.sizes = c(2, 8),
-               label.text.size = 4,
-               axis.text.size = 18,
-               axis.title.size = 18,
-               legend.text.size = 18,
-               panel.heights = c(4, 4, 0.8, 2))
-dev.off()
+               color_pip_by = "cs")
+```
 
-pdf(file = "/project/xinhe/shengqian/ETS1.pdf",width = 12,height = 10)
-#finemap_res_multi[finemap_res_multi$gene_name=="TNFSF15",]
+#### TNFSF15
+```{r, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
+#pdf(file = "/project/xinhe/shengqian/TNFSF15.pdf",width = 12,height = 10)
 make_locusplot(finemap_res_multi,
                region_id = "11_128318642_130472680",
-               #locus_range = c(128318642, 128800000),
                ens_db = ens_db,
                weights = weights_multi,
                highlight_pip = 0.8,
                filter_protein_coding_genes = TRUE,
                filter_cs = TRUE,
                color_pval_by = "cs",
-               color_pip_by = "cs",
-               point.sizes = c(2, 8),
-               label.text.size = 4,
-               axis.text.size = 18,
-               axis.title.size = 18,
-               legend.text.size = 18,
-               panel.heights = c(4, 4, 0.8, 2))
-dev.off()
+               color_pip_by = "cs")
+```
 
-pdf(file = "/project/xinhe/shengqian/HLA_DRA.pdf",width = 12,height = 10)
+#### HLA_DRA
+```{r, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
+#pdf(file = "/project/xinhe/shengqian/HLA_DRA.pdf",width = 12,height = 10)
 #finemap_res_multi[finemap_res_multi$gene_name=="TNFSF15",]
 make_locusplot(finemap_res_multi,
                region_id = "6_31603441_32714887",
-               locus_range = c(32214887, 32614887),
                ens_db = ens_db,
                weights = weights_multi,
                highlight_pip = 0.8,
                filter_protein_coding_genes = TRUE,
-               filter_cs = F,
+               filter_cs = TRUE,
                color_pval_by = "cs",
-               color_pip_by = "cs",
-               point.sizes = c(1, 6),
-               label.text.size = 4,
-               axis.text.size = 18,
-               axis.title.size = 18,
-               legend.text.size = 18,
-               panel.heights = c(4, 4, 0.8, 2))
-dev.off()
+               color_pip_by = "cs")
+```
 
-pdf(file = "/project/xinhe/shengqian/ADCY3.pdf",width = 12,height = 10)
+#### ADCY3
+```{r, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
+#pdf(file = "/project/xinhe/shengqian/ATG16L1.pdf",width = 12,height = 10)
 #finemap_res_multi[finemap_res_multi$gene_name=="TNFSF15",]
 make_locusplot(finemap_res_multi,
                region_id = "2_24464049_26672117",
-               locus_range = c(24464049, 25272117),
                ens_db = ens_db,
                weights = weights_multi,
                highlight_pip = 0.8,
                filter_protein_coding_genes = TRUE,
-               filter_cs = T,
+               filter_cs = TRUE,
                color_pval_by = "cs",
-               color_pip_by = "cs",
-               point.sizes = c(2, 6),
-               label.text.size = 4,
-               axis.text.size = 18,
-               axis.title.size = 18,
-               legend.text.size = 18,
-               panel.heights = c(4, 4, 0.8, 2))
-dev.off()
+               color_pip_by = "cs")
+```
 
-pdf(file = "/project/xinhe/shengqian/RGS14.pdf",width = 12,height = 10)
-#finemap_res_multi[finemap_res_multi$gene_name=="TNFSF15",]
+#### RGS14
+```{r, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
+#pdf(file = "/project/xinhe/shengqian/ATG16L1.pdf",width = 12,height = 10)
 make_locusplot(finemap_res_multi,
                region_id = "5_176023592_177824506",
                ens_db = ens_db,
                weights = weights_multi,
                highlight_pip = 0.8,
                filter_protein_coding_genes = TRUE,
-               filter_cs = T,
+               filter_cs = TRUE,
                color_pval_by = "cs",
-               color_pip_by = "cs",
-               point.sizes = c(2, 6),
-               label.text.size = 4,
-               axis.text.size = 18,
-               axis.title.size = 18,
-               legend.text.size = 18,
-               panel.heights = c(4, 4, 0.8, 2))
-dev.off()
+               color_pip_by = "cs")
+```
 
-finemap_res_multi[!is.na(finemap_res_multi$gene_name) & finemap_res_multi$gene_name == "SEC16A", ]
-pdf(file = "/project/xinhe/shengqian/SEC16A.pdf",width = 12,height = 10)
-#finemap_res_multi[finemap_res_multi$gene_name=="TNFSF15",]
+#### SEC16A
+```{r, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
+#pdf(file = "/project/xinhe/shengqian/ATG16L1.pdf",width = 12,height = 10)
 make_locusplot(finemap_res_multi,
                region_id = "9_136047132_136605890",
                ens_db = ens_db,
                weights = weights_multi,
                highlight_pip = 0.8,
                filter_protein_coding_genes = TRUE,
-               filter_cs = T,
+               filter_cs = TRUE,
                color_pval_by = "cs",
-               color_pip_by = "cs",
-               point.sizes = c(2, 6),
-               label.text.size = 4,
-               axis.text.size = 18,
-               axis.title.size = 18,
-               legend.text.size = 18,
-               panel.heights = c(4, 4, 0.8, 2))
-dev.off()
+               color_pip_by = "cs")
 ```
+
+
+
+
+
 
